# AdventOfCode_2025

./: CMakeLists.txt  README.md  main.cpp
notes/: Day2_1_numberGenExample.py  Day5_1_rangevisuliser.py  Day5_1_testDataGen.py  tmp.cpp
solutions/: Day1.cpp  Day1.h  Day1_1.cpp  Day1_1.h  Day1_2.cpp  Day1_2.h  Day2_1.cpp  Day2_1.h  Day2_2.cpp  Day2_2.h  Day3_1.cpp  Day3_1.h  Day3_2.cpp  Day3_2.h  Day4_1.cpp  Day4_1.h  Day4_2.cpp  Day4_2.h  Day5_1.cpp  Day5_1.h  Day5_2.cpp  Day5_2.h  Day6_1.cpp  Day6_1.h  Day6_2.cpp  Day6_2.h  Day7_1.cpp  Day7_1.h  Day7_2.cpp  Day7_2.h  Day8_1.cpp  Day8_1.h  Day8_2.cpp  Day8_2.h
