cmake_minimum_required(VERSION 4.0)
project(AdventOfCode_2025)

set(CMAKE_CXX_STANDARD 20)

add_executable(AdventOfCode_2025 main.cpp
        solutions/Day1_1.cpp
        solutions/Day1_1.h
        solutions/Day1_2.cpp
        solutions/Day1_2.h
        solutions/Day2_1.cpp
        solutions/Day2_1.h
        solutions/Day2_2.cpp
        solutions/Day2_2.h
        solutions/Day3_1.cpp
        solutions/Day3_1.h
        solutions/Day3_2.cpp
        solutions/Day3_2.h
        solutions/Day4_1.cpp
        solutions/Day4_1.h
        solutions/Day4_2.cpp
        solutions/Day4_2.h
        solutions/Day5_1.cpp
        solutions/Day5_1.h
        solutions/Day5_2.cpp
        solutions/Day5_2.h
        solutions/Day6_1.cpp
        solutions/Day6_1.h
        solutions/Day6_2.cpp
        solutions/Day6_2.h
        solutions/Day7_1.cpp
        solutions/Day7_1.h
)